[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "ppi_toolkit"
version = "0.0.1"
readme = "README.md"
[tool.setuptools.package-dir]
"" = "tool"
"deepfold" = "backbone"
[tool.setuptools.packages.find]
where=["backbone", "tool"]
exclude=["backbone*", "tool*"]
namespaces=true
